<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg3"
    android:id="@+id/scrollView1">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/edtSearch"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:completionThreshold="1"
            android:hint="@string/hint_city"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnXacNhanCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="OK" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTenThanhPho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="50dp"
        android:text="Thành Phố "
        android:textColor="@color/white"
        android:textSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageView

            android:id="@+id/imgTrangThai"
            android:layout_width="123dp"
            android:layout_height="134dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNhietDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="1"

                android:text="Nhiệt độ"
                android:textColor="#fff"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/txtTrangThai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="Trạng thái : "
                android:textColor="#fff"

                android:textSize="20dp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txtcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/thoi_tiet_o"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txtNgayCapNhat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Thứ, ngày, tháng, năm"
        android:textColor="@color/white"
        android:textSize="20dp" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="5dp"

        android:stretchColumns="*">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/chi_tiet"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/humidity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell"
                android:text="@string/do_am"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDoAm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:background="@drawable/cell"
                android:text="Độ ẩm"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"

                android:src="@drawable/icon_cloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell"

                android:text="@string/may"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtMay"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:background="@drawable/cell"
                android:text="Mây"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/wind" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell"
                android:text="@string/toc_do_gio"

                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:background="@drawable/cell"
                android:text="Gió"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell"
                android:text="@string/mat_troi_moc"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textviewSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:background="@drawable/cell"

                android:text="11:00"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/sunset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell"
                android:text="@string/mat_troi_lan"

                android:textSize="18sp" />

            <TextView
                android:id="@+id/textviewSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:background="@drawable/cell"

                android:text="18:00"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/geocoord" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell"
                android:text="@string/toa_do"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textviewCoord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:background="@drawable/cell"
                android:text="[132.0,-81.0]"
                android:textSize="18sp" />

        </TableRow>


    </TableLayout>
    <TextView
        android:text="Thời tiết 12h tiếp theo"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/list12h"
            android:layout_width="match_parent"
            android:layout_height="700dp">
        </ListView>




    <Button
        android:id="@+id/btnNgayKeTiep"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/thoi_tiet_7_ngay"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>
</ScrollView>



